Enabled communicaiton to take place between service worker and client

--- a/index.html
+++ b/index.html
@@ -25,6 +25,8 @@
       }
     </script>
     <div id="test-worker"></div> 
-    <script type="module" src="/src/main.js" defer></script>
+
+    <script type="module" src="/src/main.js"></script>    
+    <script type="module" src="/src/scripts/clients-sw-api.js"></script>
   </body>
 </html>
